@@ -1,6 +1,6 @@
 ---
 fixtures:
   repositories:
-    stdlib: https://github.com/simp/puppetlabs-stdlib
+    stdlib: https://github.com/simp/puppetlabs-stdlib.git
   symlinks:
     simp_banners: "#{source_dir}"
