@@ -14,6 +14,7 @@ dist
 /.rspec_system
 /.vagrant
 /.bundle
+/.vendor
 /vendor
 /junit
 /log
